<resources>
    <string name="app_name">BootcampDesignAssignment</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="telegram">Telegram</string>
    <string name="detail">Detail</string>
    <string name="history">History</string>
    <string name="user_country">Bontul,Yogyakarta</string>
    <string name="user_name">Adi Sucipto</string>
    <string name="todo">TODO</string>
</resources>